--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ManageVacanciesTransfers.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ManageVacanciesTransfers.cshtml
@@ -9,7 +9,7 @@
     <p>
         Transferring Vacancies With Vacancy Reference Numbers:
     </p>
-    if (@Model.VacancyReferenceNumbers != null)
+    if (Model != null && Model.VacancyReferenceNumbers != null)
     {
         <ul>
             @foreach (var vacancyReferenceNumber in Model.VacancyReferenceNumbers)
@@ -21,18 +21,22 @@
     }
     <p>To</p>
     <div class="form-group">
+        @if (Model != null)
+        {
+            @Html.Hidden("ProviderId", Model.ProviderId)
+            @Html.Hidden("ProviderSiteId", Model.ProviderSiteId)
+        }
+        
         @Html.LabelFor(m => m.ProviderName)
         <div class="form-control">
             @Html.DisplayTextFor(m => m.ProviderName)
-            @Html.Hidden("ProviderId", Model.ProviderId)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ProviderSiteName)
         <div class="form-control">
-            @Html.DisplayTextFor(m => m.ProviderSiteName)
-            @Html.Hidden("ProviderSiteId", Model.ProviderSiteId)
+            @Html.DisplayTextFor(m => m.ProviderSiteName)            
         </div>
     </div>
-        <button type="submit" class="button">Confirm Transfer</button>
+    <button type="submit" class="button">Confirm Transfer</button>
 }
