--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
@@ -80,7 +80,7 @@
                             {
                                 <tr>
                                     <td>
-                                        <div class="reactive-title">@HtmlExtensions.EscapeHtmlEncoding(vacancy.Title)</div>
+                                        <div class="reactive-title">@HtmlExtensions.EscapeHtmlEncoding(Html, vacancy.Title)</div>
                                     </td>
                                     <td>
                                         @vacancy.VacancyType.ToString()
