Added scaffolding for viewing and editing provider users

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Index.cshtml
@@ -6,6 +6,7 @@
 <h1 id="heading" class="heading-xlarge">Administrator functions</h1>
 
 <ul>
+    <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminProviderUsers)">Provider Users</a></li>
     <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminChangeUkprn)">Change UKPRN</a></li>
     <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminResetUkprn)">Reset UKPRN</a></li>
 </ul>
