RA-424: View provider user

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ProviderUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ProviderUser.cshtml
@@ -17,7 +17,9 @@
             <li>ID: @Model.ProviderUserId</li>
             <li>GUID: @Model.ProviderUserGuid</li>
             <li>UKPRN: @Model.Ukprn</li>
+            <li>Provider Name: @Model.ProviderName</li>
             <li>Email Verified: @Model.EmailAddressVerified</li>
+            <li>Created: @Model.CreatedDateTime</li>
         </ul>
     </p>
 
