RA-424: Editing provider sites implemented

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ProviderUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ProviderUser.cshtml
@@ -12,6 +12,8 @@
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
+    @Html.HiddenFor(m => m.ProviderUserId)
+
     <p>
         <ul>
             <li>ID: @Model.ProviderUserId</li>
