--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancyCounts.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancyCounts.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Manage.Constants
+﻿@using SFA.Apprenticeships.Domain.Raa.Interfaces.Repositories.Models
+@using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model DashboardVacancySummariesViewModel
 
@@ -7,14 +8,14 @@
         var filterType = Model.SearchViewModel.FilterType;
     }
     <p>
-        @if (filterType != DashboardVacancySummaryFilterTypes.All)
+        @if (filterType != VacanciesSummaryFilterTypes.All)
         {
-            <span><a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, DashboardVacancySummaryFilterTypes.All))" class="font-small vacancy-filter">Show all</a></span>
+            <span><a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, VacanciesSummaryFilterTypes.All))" class="font-small vacancy-filter">Show all</a></span>
         }
     </p>
     <ul class="vacancies-summary">
         <li>
-            @if (filterType == DashboardVacancySummaryFilterTypes.SubmittedToday)
+            @if (filterType == VacanciesSummaryFilterTypes.SubmittedToday)
             {
                 <figure class="data">
                     <p class="count">@Model.SubmittedTodayCount</p>
@@ -23,7 +24,7 @@
             }
             else
             {
-                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, DashboardVacancySummaryFilterTypes.SubmittedToday))" class="vacancy-filter">
+                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, VacanciesSummaryFilterTypes.SubmittedToday))" class="vacancy-filter">
                     <figure class="data">
                         <p class="count">@Model.SubmittedTodayCount</p>
                         <figcaption><h2>Submitted today</h2></figcaption>
@@ -32,7 +33,7 @@
             }
         </li>
         <li>
-            @if (filterType == DashboardVacancySummaryFilterTypes.SubmittedYesterday)
+            @if (filterType == VacanciesSummaryFilterTypes.SubmittedYesterday)
             {
                 <figure class="data">
                     <p class="count">@Model.SubmittedYesterdayCount</p>
@@ -41,7 +42,7 @@
             }
             else
             {
-                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, DashboardVacancySummaryFilterTypes.SubmittedYesterday))" class="vacancy-filter">
+                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, VacanciesSummaryFilterTypes.SubmittedYesterday))" class="vacancy-filter">
                     <figure class="data">
                         <p class="count">@Model.SubmittedYesterdayCount</p>
                         <figcaption><h2>Submitted yesterday</h2></figcaption>
@@ -50,7 +51,7 @@
             }
         </li>
         <li>
-            @if (filterType == DashboardVacancySummaryFilterTypes.SubmittedMoreThan48Hours)
+            @if (filterType == VacanciesSummaryFilterTypes.SubmittedMoreThan48Hours)
             {
                 <figure class="data">
                     <p class="count">@Model.SubmittedMoreThan48HoursCount</p>
@@ -59,7 +60,7 @@
             }
             else
             {
-                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, DashboardVacancySummaryFilterTypes.SubmittedMoreThan48Hours))" class="vacancy-filter">
+                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, VacanciesSummaryFilterTypes.SubmittedMoreThan48Hours))" class="vacancy-filter">
                     <figure class="data">
                         <p class="count">@Model.SubmittedMoreThan48HoursCount</p>
                         <figcaption><h2>Submitted +48 hours</h2></figcaption>
@@ -68,7 +69,7 @@
             }
         </li>
         <li>
-            @if (filterType == DashboardVacancySummaryFilterTypes.Resubmitted)
+            @if (filterType == VacanciesSummaryFilterTypes.Resubmitted)
             {
                 <figure class="data">
                     <p class="count">@Model.ResubmittedCount</p>
@@ -77,7 +78,7 @@
             }
             else
             {
-                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, DashboardVacancySummaryFilterTypes.Resubmitted))" class="vacancy-filter">
+                <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, VacanciesSummaryFilterTypes.Resubmitted))" class="vacancy-filter">
                     <figure class="data">
                         <p class="count">@Model.ResubmittedCount</p>
                         <figcaption><h2>Resubmitted vacancies</h2></figcaption>
