ra-317 : Change Text from Save and Exit to Save and Continue.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -131,7 +131,7 @@
                             </label>
                         </p>
                         <p>
-                            <button type="submit" class="button" name="Review" value="ReviewSaveAndExit">Save and exit</button>
+                            <button type="submit" class="button" name="Review" value="ReviewSaveAndContinue">Save and Continue</button>
                             @Html.RouteLink("Cancel", RecruitmentRouteNames.VacancyApplications, new {Model.Vacancy.VacancyReferenceNumber})
                         </p>
                     </div>
