--- a/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
@@ -83,7 +83,7 @@
                 </div>
                 <div class="form-group">
                     <p class="med-btm-margin">
-                        <button type="submit" class="button-link" name="Review" value="ReviewSaveAndExit">Save and exit</button>
+                        <button type="submit" class="button-link" name="Review" value="ReviewSaveAndContinue">Save and Continuet</button>
                     </p>
                 </div>
             </section>
