--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
@@ -16,19 +16,19 @@
 
     <div>
         <div class="hgroup">
-            <h1 class="heading-xlarge med-btm-margin">Confirm decision - unsuccessful</h1>
+            <h1 class="heading-xlarge med-btm-margin">Inform @Model.ApplicantDetails.Name of unsuccessful application</h1>
         </div>
 
-        <p>An automated message will now be sent to the candidate to inform them they have not been selected for this role.</p>
-        <p>Your decision can't be reversed within the recruit an apprentice system once this message has been sent.</p>
+        <p> You are about to inform this candidate that they have not been selected for the role of @Model.Vacancy.Title</p>
+        <h2 class="heading-medium">@Html.DisplayNameFor(model => model.CandidateFeedback)</h2>
+        @Html.TextAreaFor(m=>m.CandidateFeedback, new { @class = "width-all-1-1 form-textarea-medium", type = "text" })        
         <section>
             <div class="form-group">
+                <br/>                
                 <button type="submit" class="button" name="SendUnsuccessfulDecision" value="SendUnsuccessfulDecision">
-                    Send
+                    Confirm and send
                 </button>
-                <p class="med-btm-margin">
-                    @Html.RouteLink("Cancel", RecruitmentRouteNames.ReviewApprenticeshipApplication, Model.ApplicationSelection.RouteValues)
-                </p>
+                @Html.RouteLink("Cancel", RecruitmentRouteNames.ReviewApprenticeshipApplication, Model.ApplicationSelection.RouteValues)
             </div>
         </section>
     </div>
