--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
@@ -1,13 +1,16 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.Apprenticeships
+@using SFA.Apprenticeships.Web.Recruit.Constants
 
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Send unsuccessful decision";
+    
 }
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmSuccessfulApprenticeshipApplication, FormMethod.Post))
 {
+    @*@Html.Partial("ValidationSummary", ViewData.ModelState)*@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.ApplicationSelection.ApplicationId)
     @Html.HiddenFor(m => m.ApplicationSelection.VacancyReferenceNumber)
@@ -26,7 +29,7 @@
                 m => m.CandidateApplicationFeedback,
                 containerHtmlAttributes: new { @class = "form-group-compound heading-small" },
                 controlHtmlAttributes: new { @class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true" })
-
+        
         <section>
             <div class="form-group">
                 <br/>                
