--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/SentDecisionConfirmation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/SentDecisionConfirmation.cshtml
@@ -1,15 +1,15 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
+﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
 
 @{
-    ViewBag.Title = "SentDecisionConfirmation";
+    ViewBag.Title = "Sent Decision Confirmation";
 }
 
-<h2>SentDecisionConfirmation</h2>
-
-<div class="success-banner">
+<div class="success-banner" role="alert" aria-live="assertive">
     <h1 class="heading-large no-btm-margin">
         <i class="fa fa-check"></i>
-        <span>@Model.ConfirmationSentMessage resubmitted for approval</span>
-                
+        @Model.ConfirmationStatusSentMessage message has been sent to @Model.ApplicantDetails.Name
     </h1>
 </div>
+
+@Html.RouteLink("Return to vacancy applications", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber }, new { @class = "button" })
