ra:317: Send unsuccessful message and show confirmation page.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
@@ -15,6 +15,7 @@
     @Html.HiddenFor(m => m.ApplicationSelection.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.ApplicationSelection.FilterType)
     @Html.HiddenFor(m => m.ApplicationSelection.PageSize)
+    @Html.HiddenFor(m=>m.ApplicationSelection.CandidateApplicationFeedback)
 
     <div>
         <div class="hgroup">
