--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmSuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmSuccessfulDecision.cshtml
@@ -15,19 +15,15 @@
     @Html.HiddenFor(m => m.ApplicationSelection.PageSize)
     <div>
         <div class="hgroup">
-            <h1 class="heading-xlarge med-btm-margin">Confirm decision - successful</h1>
+            <h1 class="heading-xlarge med-btm-margin">Select @Model.ApplicantDetails.Name for this role</h1>
         </div>
-        <p>You are about to confirm @Model.ApplicantDetails.Name's application has been successful.</p>
-        <p>Your decision can't be reversed within the recruit an apprentice system once this message has been sent.</p>
-        <p>An automated message will now be sent to the candidate to inform them they have been selected for this role.</p>
+        <p> An automated message will now be sent to the candidate to inform them that their @Model.Vacancy.Title application has been successful.</p>        
         <section>
             <div class="form-group">
                 <button type="submit" class="button" name="SendSuccessfulDecision" value="SendSuccessfulDecision">
-                    Send
-                </button>
-                <p class="med-btm-margin">
-                    @Html.RouteLink("Cancel", RecruitmentRouteNames.ReviewApprenticeshipApplication, Model.ApplicationSelection.RouteValues)
-                </p>
+                    Confirm and send
+                </button>                
+                @Html.RouteLink("Cancel", RecruitmentRouteNames.ReviewApprenticeshipApplication, Model.ApplicationSelection.RouteValues)                
             </div>
         </section>
     </div>
