--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@using System.Web.Mvc.Html
-@using SFA.Apprenticeships.Application.Application.Extensions
 @using SFA.Apprenticeships.Domain.Entities.Applications
-@using SFA.Apprenticeships.Domain.Entities.Vacancies
 @using SFA.Apprenticeships.Web.Candidate.ViewModels.MyApplications
 
-@model SFA.Apprenticeships.Web.Candidate.ViewModels.MyApplications.MyApplicationsViewModel
+@model MyApplicationsViewModel
 
 @{
     ViewBag.Title = "My applications - Find an apprenticeship";
@@ -52,7 +50,11 @@
                 var successOrUnsuccessful = applicationNotification.ApplicationStatus == ApplicationStatuses.Successful ? "successful" : "unsuccessful";
 
                 <p>
-                    Your application for <a href="#dashInProgress">@applicationNotification.Title</a> has been @successOrUnsuccessful.
+                    Your application for @applicationNotification.Title has been @successOrUnsuccessful.
+                    @if (applicationNotification.UnsuccessfulReason != null)
+                    {
+                        <a>Read feedback</a>
+                    }                        
                 </p>
             }
             <p>
