--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/DisplayTemplates/MyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/DisplayTemplates/MyApplications.cshtml
@@ -179,7 +179,7 @@ else
                                             {
                                                 <td class="ta-center">
                                                     @Html.RouteLink("Read feedback",
-                                                                 CandidateRouteNames.ApprenticeshipView, new { id = application.VacancyId })
+                                                                 CandidateRouteNames.CandidateApplicationFeedback, new { id = application.VacancyId })
                                                 </td>
                                             }
                                             <td class="ta-center">
