Reset API User Password

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
@@ -10,7 +10,7 @@
 
 @using (Html.BeginRouteForm(ManagementRouteNames.AdminEditApiUser))
 {
-    @Html.HiddenFor(m => m.ExternalSystemId);
+    @Html.HiddenFor(m => m.ExternalSystemId)
 
     <p>
         <ul>
