--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
@@ -47,6 +47,9 @@
         <p class="hide-print">
             <a id="return-to-my-applications" href="@Url.RouteUrl(CandidateRouteNames.MyApplications)">Return to my applications</a>
         </p>
+        <p class="hide-print">
+            <a id="return-to-my-feedback" href="@Url.RouteUrl(CandidateRouteNames.CandidateApplicationFeedback)">Return to your feedback</a>
+        </p>
     </div>
 </div>
 
