--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
@@ -6,8 +6,8 @@
 
 <div class="grid-wrapper">
     <div class="grid-wrapper controls-3-4">
-        <section class="grid grid-2-3">            
-                <h1 class="heading-xlarge">Your feedback</h1>            
+        <section class="grid grid-2-3">
+            <h1 class="heading-xlarge">Your feedback</h1>
             @{
                 var reason = string.IsNullOrWhiteSpace(Model.UnsuccessfulReason) ? Model.ApplicationStatusDescription : Model.UnsuccessfulReason;
             }
@@ -23,22 +23,21 @@
                 For advice on how to ensure your application has a better chance of being
                 successful @Html.RouteLink("see the next steps page", @CandidateRouteNames.NextSteps).
             </p>
-            <br/>
-            <br/>
-            @Html.RouteLink("Return to my applications", CandidateRouteNames.MyApplications, null,new {@class = "button"})
+            <br />
+            <br />
+            @Html.RouteLink("Return to my applications", CandidateRouteNames.MyApplications, null, new { @class = "button" })
         </section>
         <aside class="grid grid-1-3">
             <div class="inner-block">
                 <div class="gov-border">
-                    <h2 class="heading-medium">@Model.Title</h2>
-                    <ul class="list-text">
-                        <p>@Model.EmployerName</p>
-                    </ul>
-                    <ul class="list-text">
-                        <li>
+                    <div class="hgroup-small">
+                        <h2 class="heading-small">@Model.Title</h2>
+                        <p class="subtitle">@Model.EmployerName</p>
+                        <br />
+                        <p>
                             @Html.RouteLink("View my application", CandidateRouteNames.ApprenticeshipView, new { id = Model.VacancyId })
-                        </li>
-                    </ul>
+                        </p>
+                    </div>
                 </div>
             </div>
         </aside>
